--- a/index.html
+++ b/index.html
@@ -3,17 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My portfolio</title>
+    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Azeret+Mono:ital,wght@0,100..900;1,100..900&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/styles/assignment.css">
 </head>
-<body>
+<body class="azeret-mono-normal">
     <header>
-
+        <nav>
+            <h3 class="nav-title">Awlad.H</h3>
+            <ul>
+                <li><a href=""><button>Download Resume</button></a></li>
+            </ul>
+        </nav>
     </header>
     <main>
 
     </main>
     <footer>
-         
+
     </footer>
 </body>
 </html>
